# zip_security

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: .gitignore  local.properties
app/src/main/cpp/: CMakeLists.txt  native_entry_points.cpp  native_entry_points.hpp
app/src/main/cpp/lzw/compressor/: encode.cpp
app/src/main/cpp/lzw/debug_utils/logs/: logs.tpp  (+1 more)
app/src/main/cpp/lzw/perf_comparison/: comp_dict.py  pdf_dict_comp.py  total_comp.py
app/src/main/java/nativecpp/lzw/: LzwArchiver.kt
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/main/cpp/.cache/clangd/index/: native-lib.cpp.652B7AA7B291F45A.idx
src/main/cpp/lzw/: CMakeLists.txt  README.md
src/main/cpp/lzw/.cache/clangd/index/: ASSERT.hpp.6A51838DD42D7C6C.idx  chacha20_test.hpp.50215901A6D117B5.idx  compress_tests.hpp.1C5FFFBD746EC05E.idx  compressor.hpp.00EB9BF160EE6995.idx  compressor.hpp.2B1DDF05AC30DC8E.idx  config.hpp.6255D628F496CA9A.idx  config.hpp.9B0BC75CAD1E3BA7.idx  console_colors.hpp.64BACE56E3E5500F.idx  debug_utils.hpp.4B51B08048C548C5.idx  decode.cpp.491F46B977B8B5A8.idx  decode.cpp.F06FFAAC925A06ED.idx  decompress_tests.hpp.2A8B138724C85A52.idx  decompressor.hpp.320C9E7D068CD79F.idx  decompressor.hpp.B1774B461BA6BFB1.idx  dict_train.hpp.7DA7A95B49B7DBA4.idx  dict_train.hpp.C8371597B6016332.idx  encode.cpp.7BE983BF0C62C2FF.idx  encode.cpp.BD103FD119E02302.idx  error_control.cpp.A20006DB680C21F9.idx  error_control.hpp.14355AE7C639CB9D.idx  logs.hpp.831E0871A6B14085.idx  logs.tpp.95EFA6D06CE920EB.idx  logs_define.h.A5ED7119473BFF1F.idx  lzw.cpp.8030EE032DFCB486.idx  lzw.cpp.8E1F556D6C55DA7B.idx  lzw.hpp.2B2ABF52B0A4E94B.idx  lzw.hpp.7F0045864D5B723E.idx  main.cpp.B4EAE32822145F50.idx  main.cpp.FEBF986D98426589.idx  time_control.hpp.1040454AA16081ED.idx  unit_tests.hpp.AB9378DBADBB872C.idx  unit_tests.hpp.FBCABE1B7C2727DB.idx  utils.cpp.3A63AA6247C230C7.idx  utils.cpp.E1BE9F70284CA963.idx  utils.hpp.2DBEEAC6D52D30EC.idx  utils.hpp.CAF008E97F8EE7FB.idx
src/main/cpp/lzw/compressor/: CMakeLists.txt  decode.cpp  encode.cpp
src/main/cpp/lzw/compressor/include/: compressor.hpp  decompressor.hpp  dict_train.hpp  lzw.hpp
src/main/cpp/lzw/compressor/src/: CMakeLists.txt
src/main/cpp/lzw/debug_utils/: CMakeLists.txt  console_colors.hpp  debug_utils.hpp
src/main/cpp/lzw/debug_utils/error_control/: error_control.cpp  error_control.hpp
src/main/cpp/lzw/debug_utils/logs/: logs.hpp
src/main/cpp/lzw/debug_utils/time_control/: time_control.hpp
src/main/cpp/lzw/encryptor/: CMakelists.txt  chacha20.hpp  key_generator.hpp
src/main/cpp/lzw/encryptor/tests/: CMakeLists.txt  chacha20_test.hpp  unit_tests.hpp
src/main/cpp/lzw/perf_comparison/: bin_dict_comp.py  zstd_comp.py  zstd_dict_comp.py
src/main/cpp/lzw/perf_comparison/data/: dict_comp.txt  total_comp.txt  zstd_dict_comp.txt
src/main/cpp/lzw/samples/bin_samples/: set  unlzw
src/main/cpp/lzw/samples/lit_samples/: 0.samp  1014.samp  1015.samp  1019.samp  102.samp  1020.samp  1021.samp  1025.samp  1026.samp  1032.samp  1035.samp  104.samp  1046.samp  1049.samp  1051.samp  1052.samp  1056.samp  107.samp  1071.samp  1075.samp  1077.samp  1081.samp  1082.samp  1088.samp  1090.samp  1095.samp  1105.samp  1106.samp  1109.samp  1116.samp  1117.samp  112.samp  1136.samp  115.samp  116.samp  1161.samp  1162.samp  1164.samp  1167.samp  1172.samp  (+1223 more)
src/main/cpp/lzw/samples/src_samples/: 104.samp  110.samp  123.samp  125.samp  129.samp  130.samp  134.samp  135.samp  136.samp  139.samp  141.samp  142.samp  143.samp  145.samp  146.samp  15.samp  150.samp  153.samp  157.samp  159.samp  16.samp  160.samp  161.samp  162.samp  173.samp  179.samp  18.samp  184.samp  187.samp  189.samp  2.samp  200.samp  214.samp  22.samp  229.samp  23.samp  238.samp  240.samp  244.samp  247.samp  (+48 more)
src/main/cpp/lzw/tests/: CMakeLists.txt
src/main/cpp/lzw/tests/end_to_end_tests/: clean_output.sh
src/main/cpp/lzw/tests/end_to_end_tests/my_compress_dat/: 11.dat.lzw  16.dat.lzw  17.dat.lzw  5.dat.lzw  6.dat.lzw  8.dat.lzw  9.dat.lzw  OpenSans-Regular.bin.lzw  SourceCodePro-Regular.bin.lzw  index.zstd  slick.bin.zstd  unit_tests.lzw  unit_tests.zstd  unitests.lzw  unitests.zstd  unlzw.lzw  unlzw.zstd
src/main/cpp/lzw/tests/end_to_end_tests/my_decompress_dat/: 0.dat.decode  11.dat.decode  16.dat.decode
src/main/cpp/lzw/tests/end_to_end_tests/my_dictionary/bin_dict/: zstd.dict
src/main/cpp/lzw/tests/end_to_end_tests/my_dictionary/lit_dict/: zstd.dict
src/main/cpp/lzw/tests/end_to_end_tests/my_dictionary/src_dict/: zstd.dict
src/main/cpp/lzw/tests/end_to_end_tests/my_input_dat/source_dat/: 10.cpp  4.src_dat  5.src_dat  8.cpp
src/main/cpp/lzw/tests/samples/: sample_gener.py
src/main/cpp/lzw/tests/samples/big_samples/: big_src.samp
src/main/cpp/lzw/tests/samples/bin_samples/: bit_sort  lzw  paracl  unitests
src/main/cpp/lzw/tests/samples/lit_samples/: 1.samp  10.samp  1000.samp  1001.samp  1002.samp  1003.samp  1007.samp  1009.samp  1010.samp  1011.samp  1012.samp  1013.samp  1024.samp  1027.samp  1028.samp  103.samp  1030.samp  1034.samp  1036.samp  1037.samp  1038.samp  1039.samp  1041.samp  1042.samp  1047.samp  1050.samp  1053.samp  1054.samp  1055.samp  1057.samp  1059.samp  1060.samp  1062.samp  1066.samp  1068.samp  1069.samp  1070.samp  1072.samp  1074.samp  1076.samp  (+2319 more)
src/main/cpp/lzw/tests/samples/src_samples/: 0.samp  1.samp  10.samp  100.samp  101.samp  103.samp  105.samp  106.samp  107.samp  108.samp  109.samp  11.samp  111.samp  113.samp  117.samp  12.samp  120.samp  121.samp  122.samp  124.samp  126.samp  127.samp  128.samp  131.samp  137.samp  140.samp  144.samp  147.samp  148.samp  149.samp  151.samp  152.samp  155.samp  156.samp  164.samp  165.samp  167.samp  168.samp  169.samp  17.samp  (+118 more)
src/main/cpp/lzw/tests/unit_tests/: compress_tests.hpp  decompress_tests.hpp  encrypt_compress_test.hpp  unit_tests.hpp
src/main/cpp/lzw/utils/: utils.hpp
src/main/java/com/example/zipper/: MainActivity.kt
src/main/res/layout/: activity_main.xml  dialog_action_setup.xml
(+1425 files in other folders)
